--- a/css/style.css
+++ b/css/style.css
@@ -15,11 +15,23 @@ a {
     text-decoration: none;    
 }
 
+button {
+    text-transform: uppercase;
+    color: #ffffff;
+
+    background-color: #fb565a;
+}
+
 .main-navigation {
+    text-transform: uppercase;
     line-height: 1.88;  
+    
+    color: #000000;
     background-color: #eeeeee;
+
+    
   }
 
-.site-navigation {
+.main-navigation ul {
     list-style: none;
-  }
+}
