--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
     font-family: "Roboto", Arial, sans-serif;
     font-size: 16px;
     line-height: 1.5;
-    font-weight: 400;
+    font-weight: 500;
     color: #000000;
     
     background-color: #ffffff;
@@ -22,6 +22,18 @@ button {
     background-color: #fb565a;
 }
 
+button:hover,
+button:focus {
+    background-color: #e74246;
+    outline: none;
+}
+
+button:active {
+    color: rgba(255, 255, 255, 0.3);
+    box-shadow: inset 0px 3px 0 0 rgba(0, 1, 1, 0.1);
+    background-color: #d7373b;
+}
+
 .main-navigation {
     text-transform: uppercase;
     line-height: 1.88;
@@ -36,7 +48,6 @@ button {
 
 .main-navigation a {
     color: #000000;
-    font-weight: 500;
 }
 
 .main-navigation a:hover,
