Спрятал все visually-hidden элементы

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,15 @@ body {
     background-color: #ffffff;
 }
 
+.visually-hidden {
+    position: absolute;
+    clip: rect(0 0 0 0);
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    color: #ffffff;
+}
+
 a {
     text-decoration: none;    
 }
