--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,8 @@ a {
 button {
     text-transform: uppercase;
     color: #ffffff;
+    text-align: center;
+    vertical-align: middle;
 
     background-color: #fb565a;
 }
