--- a/css/style.css
+++ b/css/style.css
@@ -72,10 +72,67 @@ button:active {
 }
 
 .slogan-section {
-    background-color: #eeeeee  
+    background-color: #eeeeee; 
 }
 
 .slogan-section figure {
-    border: 2px solid #ffffff ;
+    border: 2px solid #ffffff;
     background-color: grey;
 }
+
+.slogan-section h3 {
+    font-size: 55px;
+    line-height: 1;
+    text-align: left;
+}
+
+.slogan-section ul {
+    list-style: none;
+}
+
+.features-section h3 {
+    font-size: 24px;
+    font-weight: bold;
+    text-align: left;
+    text-transform: uppercase;
+}
+
+.features-section h3 {
+    font-size: 24px;
+    font-weight: bold;
+    text-align: left;
+    text-transform: uppercase;
+}
+
+.features-section p {
+    text-align: left;
+}
+
+.feature-apps button{
+    background-color: #00ca74;
+}
+
+.feature-apps button:hover,
+.feature-apps button:focus {
+    background-color: #00bc6c;
+}
+
+.feature-apps button:active {
+    background-color: #00aa62;
+}
+
+
+
+.feature-presentations button{
+    background-color: #efc84a;
+}
+
+.feature-presentations button:hover,
+.feature-presentations button:focus {
+    background-color: #eab534;
+}
+
+.feature-presentations button:active {
+    background-color: #e5a722;
+}
+
