--- a/css/style.css
+++ b/css/style.css
@@ -223,3 +223,16 @@ button:active {
     background-color: #e1e1e1;
     border-radius: 50%;
 }
+
+/*стилизация каталога*/
+
+.catalog-name {
+    background-color: #eeeeee;
+}
+
+.catalog-name h1 {
+    font-size: 55px;
+    font-weight: 500;
+    text-align: center;
+}
+
