--- a/css/style.css
+++ b/css/style.css
@@ -217,11 +217,24 @@ button:active {
     color: #444444;
 }
 
-.footer-social-links {
+.site-footer a {
+    display: block;
     height: 79px;
     width: 79px;
     background-color: #e1e1e1;
     border-radius: 50%;
+}
+
+.site-footer a:hover,
+.site-footer a:focus {
+    background-color: #e74246;
+    outline: none;
+}
+
+.site-footer a:active {
+    box-shadow: inset 0px 3px 0 0 rgba(0, 1, 1, 0.1);
+    background-color: #d7373b;
+    outline: none;
 }
 
 /*стилизация каталога*/
