--- a/css/style.css
+++ b/css/style.css
@@ -316,7 +316,7 @@ button:active {
 .site-navigation :nth-child(3) span{
     padding-bottom: 12px;
     padding-right: 0;
-    width: 74x;
+    width: 74px;
     border-bottom: 2px solid #fb565a
 }
 
